# cicd_playground

./: Cargo.toml  README.md
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
