[package]
name = "fm"
version = "0.1.0"
edition = "2021"
authors = ["Andy Russell <arussell123@gmail.com>"]
publish = false
license = "MIT"
repository = "https://github.com/euclio/fm"
homepage = "https://github.com/euclio/fm"
description = "A small, general-purpose file manager."

[dependencies]
anyhow = "1.0.51"
clap = { version = "4.3.21", features = ["derive"] }
directories = "4.0.1"
educe = { version = "0.4.19", features = ["Debug"], default-features = false }
futures = { version = "0.3.25", default-features = false }
itertools = "0.10.5"
mime = "0.3.16"
once_cell = "1.9.0"
pathdiff = "0.2.1"
poppler-rs = { version = "0.24.1" }
relm4 = { version = "0.9.0", features = ["libadwaita", "libpanel", "gnome_43"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sourceview5 = "0.9.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.4"

aes-gcm = "0.9"
shellexpand = "2.1"
rusqlite = "0.26"
password-hash = "0.3"
rand_chacha = "0.3"
sha2 = "0.10.8"


argon2 = "0.5.3"
rand = "0.8.5"
thiserror = "1.0.64"

notify = "5.0.0"

blake2 = "0.10.5"
rpassword = "7.1.0"
daemonize = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
bip32 = "0.5.0"
secp256k1 = "0.20.0"
openssl = "0.10.36"
ecies = "0.2.3"
derivation-path = "0.2.0"
tempfile = "3.4.0"
lazy_static = "1.4.0"
warp = "0.3"
bip39 = "2.0.0"
zeroize = "1.6.0"
sysinfo = "0.29.0"
dirs = "4.0.0"
walkdir = "2.3.2"
base64 = "0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.3"

[term]
quiet = true
